--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Cars#show</h1>
-<%= @car.make %>
+<div>
+  <div>
+    <div>
+      <p>Make: <%= @car.make %></p>
+      <p>Model: <%= @car.model %></p>
+      <p>Year: <%= @car.year %></p>
+      <p>Color: <%= @car.color %></p>
+      <p>MSRP: $<%= @car.msrp %></p>
+      <p>Used: <%= @car.used %></p>
+    </div>
+    <div>
+      <%= link_to 'Delete', car_path(@car.id), method: :delete %>
+      <%= link_to 'Back', cars_path %>
+    </div>
+  </div>
+</div>
